# taylorPat.github.io

./: .gitignore  README.md  main.py  pyproject.toml
docs/: index.html
docs/static/: style.css
portfolio/: build.py
portfolio/data/: profile.yml
portfolio/static/: style.css
portfolio/templates/: base.html  base.html.jinja  index.html  index.html.jinja
src/portfolio/: generate_html.py  main.py
